--- a/src/pages/EnergyIndicator/styles/cards-heights-v2.css
+++ b/src/pages/EnergyIndicator/styles/cards-heights-v2.css
@@ -1,19 +1,19 @@
-#gauge-card-body{
-    height: 150px;
+#gauge-card-body-dos{
+    height: 300px;
 }
 
 @media (min-width: 768px) {
-    #gauge-card-body{
+    #gauge-card-body-dos{
         height: 200px;
     }
  }
  @media (min-width: 992px) {
-    #gauge-card-body{
+    #gauge-card-body-dos{
         height: 300px;
     }
  }
  @media (min-width: 1200px) {
-    #gauge-card-body{
+    #gauge-card-body-dos{
         height: 330px;
     }
  }
