--- a/src/pages/EnergyIndicator/components/cut-svg.styles.css
+++ b/src/pages/EnergyIndicator/components/cut-svg.styles.css
@@ -22,26 +22,15 @@
   #energia {
     fill: var(--verde-oscuro);
   }
-  #medicina {
+  #waves path {
+    d: path('M0,192 C220,100,440,100,660,192 C880,290,1100,290,1320,192 L1320 500 L0 500');
     animation: oceanWave 7s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
   }
-  #energia {
-    animation: oceanWave 9s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-  }
-  #atencion {
-    animation: oceanWave 7s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-  }
-  #biblioteca {
-    animation: oceanWave 9s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-  }
+
+  #waves path:nth-child(2) { animation-delay: 2s; }
+  #waves path:nth-child(3) { animation-delay: 4s; }
   
   @keyframes oceanWave {
     0% { d: path("M0,192 C220,100,440,100,660,192 C880,290,1100,290,1320,192 L1320 500 L0 500"); }
