--- a/src/pages/EnergyIndicator/components/cut-svg.styles.css
+++ b/src/pages/EnergyIndicator/components/cut-svg.styles.css
@@ -6,8 +6,20 @@
     --rojo: #ed0022;
   }
 
-  svg {
-    cursor: pointer;
+  #waves:hover > :not(:hover){
+     opacity: .6; 
+     transition: .5s;
+     transform: scale(0.95);
+    transform: translateY(23px);
+  }
+  #waves g:hover > path{
+    animation-duration: 1.3s;
+  }
+  #waves g:hover > path:nth-child(2){
+    animation-duration: 1.1s;
+  }
+  #waves g:hover > path:nth-child(3){
+    animation-duration: 1s;
   }
 
   #biblioteca {
